<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textSize="30sp"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question"
                android:textSize="20sp" />

    ////////////////////////////////////////////////////////////////////

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blocks"
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1"
                    android:textColor="@color/blocks_txt_color"
                    android:textSize="15sp" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rd1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer1"
                        android:textColor="@color/blocks_txt_color" />

                    <RadioButton
                        android:id="@+id/rd2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer2"
                        android:textColor="@color/blocks_txt_color" />

                    <RadioButton
                        android:id="@+id/rd3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer3"
                        android:textColor="@color/blocks_txt_color" />
                </RadioGroup>


            </LinearLayout>
//////////////////////////////////////////////////////////////////////////////

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blocks"
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question2"
                    android:textColor="@color/blocks_txt_color"
                    android:textSize="15sp" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rd4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer4"
                        android:textColor="@color/blocks_txt_color" />

                    <RadioButton
                        android:id="@+id/rd5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer5"
                        android:textColor="@color/blocks_txt_color" />

                    <RadioButton
                        android:id="@+id/rd6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer6"
                        android:textColor="@color/blocks_txt_color" />
                </RadioGroup>


            </LinearLayout>
//////////////////////////////////////////////////////////////////////////////
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blocks"
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question3"
                    android:textColor="@color/blocks_txt_color"
                    android:textSize="15sp" />

                <CheckBox
                    android:id="@+id/ch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer7"
                    android:textColor="@color/blocks_txt_color"
                    />
                <CheckBox
                    android:id="@+id/ch2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer8"
                    android:textColor="@color/blocks_txt_color"
                    />
                <CheckBox
                    android:id="@+id/ch3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer9"
                    android:textColor="@color/blocks_txt_color"
                    />


            </LinearLayout>
////////////////////////////////////////////////////////////////////////////

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blocks"
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question4"
                    android:textColor="@color/blocks_txt_color"
                    android:textSize="15sp" />

                <CheckBox
                    android:id="@+id/ch4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer10"
                    android:textColor="@color/blocks_txt_color"
                    />
                <CheckBox
                    android:id="@+id/ch5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer11"
                    android:textColor="@color/blocks_txt_color"
                    />
                <CheckBox
                    android:id="@+id/ch6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer12"
                    android:textColor="@color/blocks_txt_color"
                    />


            </LinearLayout>
///////////////////////////////////////////////////////////////////////////////////
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blocks"
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question5"
                    android:textColor="@color/blocks_txt_color"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint1"
                    android:textColorHint="#C6BCBC"/>


            </LinearLayout>
            ///////////////////////////////////////////////////////////////////////////

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blocks"
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question6"
                    android:textColor="@color/blocks_txt_color"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint1"


                    android:textColorHint="#C6BCBC"/>


            </LinearLayout>
/////////////////////////////////////////////////////////////////////////////

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blocks"
                android:orientation="vertical"

                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp">

                <Button
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Submit"
                    android:textSize="20dp"
                    android:textColor="@color/blocks_txt_color"
                    android:background="#EA3E78"/>
            </LinearLayout>
            //////////////////////////////////////////////////////////////////


        </LinearLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>